--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,18 @@ SET(CMAKE_BUILD_TYPE Debug)
 
 SET(CMAKE_CXX_STANDARD 11)
 
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG .)
+
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE .)
+
 ADD_EXECUTABLE(jp main.cpp)
+
+INSTALL(TARGETS jp
+        RUNTIME DESTINATION bin)
+
+IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
+        ADD_CUSTOM_TARGET(copy ALL
+                COMMAND cp ./jp.exe 'C:/Windows/system32/'
+                DEPENDS jp
+        )
+ENDIF()
