--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cmake . && cmake --build .
+      run: cmake . && cmake --build . --config Release
     - name: Package
       run: zip --junk-paths ${{ matrix.asset_name }} ${{ matrix.artifact_name }}
     - name: Upload
@@ -39,7 +39,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cmake . && cmake --build .
+      run: cmake . && cmake --build . --config Release
     - name: Package
       run: Compress-Archive jp.exe windows-jp.zip
     - name: Upload
