--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,11 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 PROJECT(jp)
 
-SET(CMAKE_BUILD_TYPE Debug)
+SET(CMAKE_BUILD_TYPE Release)
 
 SET(CMAKE_CXX_STANDARD 11)
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG .)
-
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE .)
 
 ADD_EXECUTABLE(jp main.cpp)
