--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
       - name: test dir
         run: jp ./example
         continue-on-error: true
+      - name: test jp.
+        run: jp.
+        continue-on-error: true
 
   macos:
     runs-on: macos-latest
@@ -65,6 +68,9 @@ jobs:
         continue-on-error: true
       - name: test dir
         run: jp ./example
+        continue-on-error: true
+      - name: test jp.
+        run: jp.
         continue-on-error: true
 
   windows:
@@ -97,4 +103,7 @@ jobs:
         continue-on-error: true
       - name: test dir
         run: jp ./example
+        continue-on-error: true
+      - name: test jp.
+        run: jp.
         continue-on-error: true
